--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             updateConfig();
             
             if (!apiConfig.apiKey) {
-                logMessage('Error: API key is required', 'warning');
+                logMessage('Error: Client ID is required', 'warning');
                 return;
             }
 
@@ -342,7 +342,7 @@
             updateConfig();
             
             if (!apiConfig.apiKey) {
-                logMessage('Error: API key is required', 'warning');
+                logMessage('Error: Client ID is required', 'warning');
                 return;
             }
 
